-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Testing Infrastructure
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The closeall.js test is failing on pretty much all Buildbot (i.e. all platforms), some with different symptoms. The most common failure is
[replslave] repl: AssertionException invalid db name: /data/db/closeall_slave
http://buildbot.mongodb.org/builders/Linux%2064-bit/builds/4718/steps/test_9/logs/stdio
*******************************************
Test : closeall.js ...
Command : /mnt/home/buildbot/slave/Linux_64bit/mongo/mongo --port 27999 --nodb /mnt/home/buildbot/slave/Linux_64bit/mongo/jstests/dur/closeall.js --eval TestData = new Object();TestData.testPath = "/mnt/home/buildbot/slave/Linux_64bit/mongo/jstests/dur/closeall.js";TestData.testFile = "closeall.js";TestData.testName = "closeall";TestData.noJournal = false;TestData.noJournalPrealloc = false;TestData.auth = false;TestData.keyFile = null;TestData.keyFileData = null;
Date : Sat Sep 1 04:39:12 2012
(output suppressed; see http://buildlogs.mongodb.org/build/504198d5d2a60f714d00005a/test/5041c9b0d2a60f3f870008e8/)
command timed out: 10800 seconds without output, killing pid 1640
process killed by signal 9
program finished with exit code -1
elapsedTime=10961.356650
http://buildlogs.mongodb.org/build/504198d5d2a60f714d00005a/test/5041c9b0d2a60f3f870008e8/
Sat Sep 1 04:39:12 shell: started program /mnt/home/buildbot/slave/Linux_64bit/mongo/mongod --port 30001 --dbpath /data/db/closeall --dur --durOptions 0 --master --oplogSize 64 m30001| Sat Sep 1 04:39:12 [initandlisten] m30001| Sat Sep 1 04:39:12 [initandlisten] ** NOTE: This is a development version (2.3.0-pre-) of MongoDB. m30001| Sat Sep 1 04:39:12 [initandlisten] ** Not recommended for production. m30001| Sat Sep 1 04:39:12 [initandlisten] m30001| Sat Sep 1 04:39:12 [initandlisten] MongoDB starting : pid=2206 port=30001 dbpath=/data/db/closeall master=1 64-bit host=ip-10-2-29-40 m30001| Sat Sep 1 04:39:12 [initandlisten] db version v2.3.0-pre-, pdfile version 4.5 m30001| Sat Sep 1 04:39:12 [initandlisten] git version: 15624a7a7e60ce1f50fc50f6cba54398b2af17d2 m30001| Sat Sep 1 04:39:12 [initandlisten] build info: Linux ip-10-2-29-40 2.6.21.7-2.ec2.v1.2.fc8xen #1 SMP Fri Nov 20 17:48:28 EST 2009 x86_64 BOOST_LIB_VERSION=1_49 m30001| Sat Sep 1 04:39:12 [initandlisten] options: { dbpath: "/data/db/closeall", dur: true, durOptions: 0, master: true, oplogSize: 64, port: 30001 } // ... snip ... m30002| Sat Sep 1 04:41:49 [replslave] repl: syncing from host:localhost:30001 m30002| Sat Sep 1 04:41:49 [FileAllocator] done allocating datafile /data/db/closeall_slave/local.1, size: 128MB, took 0.561 secs m30002| Sat Sep 1 04:41:49 [replslave] resync: dropping database closealltest m30002| Sat Sep 1 04:41:52 [replslave] removeJournalFiles m30002| Sat Sep 1 04:41:52 [replslave] repl: AssertionException invalid db name: /data/db/closeall_slave m30001| Sat Sep 1 04:41:52 [conn3] end connection 127.0.0.1:38274 (2 connections now open) m30002| Sat Sep 1 04:41:54 [replslave] repl: syncing from host:localhost:30001 m30002| repl: sleep 2 sec before next pass 2012-09-01 04:41:56 EDT m30002| Sat Sep 1 04:41:54 [replslave] An earlier initial clone of 'closealltest' did not complete, now resyncing. m30001| Sat Sep 1 04:41:54 [initandlisten] connection accepted from 127.0.0.1:38275 #4 (3 connections now open) m30002| Sat Sep 1 04:41:54 [replslave] removeJournalFiles m30001| Sat Sep 1 04:41:54 [conn4] end connection 127.0.0.1:38275 (2 connections now open) m30002| Sat Sep 1 04:41:54 [replslave] repl: AssertionException invalid db name: /data/db/closeall_slave m30002| Sat Sep 1 04:41:54 [replslave] resync: dropping database closealltest m30002| Sat Sep 1 04:41:56 [replslave] repl: syncing from host:localhost:30001 m30002| Sat Sep 1 04:41:56 [replslave] An earlier initial clone of 'closealltest' did not complete, now resyncing. m30002| Sat Sep 1 04:41:56 [replslave] resync: dropping database closealltest m30001| Sat Sep 1 04:41:56 [initandlisten] connection accepted from 127.0.0.1:38278 #5 (3 connections now open) m30002| Sat Sep 1 04:41:56 [replslave] removeJournalFiles m30002| repl: sleep 2 sec before next pass