SERVER-6914 ReplSource::resync() needs a local copy of db name

We can't use the incoming const string reference for the name of
the db, because we drop the existing database and that releases the
memory that is holding the name.  Make a local copy of the db name
to use after we have dropped the original.